--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         async function fetchData() {
-            const response = await fetch("https://esp32-server.onrender.com/data");
+            const response = await fetch("https://esp32-27mf.onrender.com/data");
             const data = await response.json();
             document.getElementById("voltage").innerText = `Voltaje: ${data.voltage.toFixed(2)} V`;
         }
